<resources>
    <string name="app_name">Wolt-pt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_details">Account Details</string>
    <string name="no_more">No more</string>
    <string name="enter_account">Enter Account</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="download_app">Download APP</string>
    <string name="language">Language</string>
    <string name="register_a_new_account">Register a new Account</string>
    <string name="information_center">Information Center</string>
    <string name="my_shares">My Shares</string>
    <string name="my_wallet">My Wallet</string>
    <string name="the_amount_of_unlocked_yelp_vip2_account_must_be_greater_than_100_please_go_to_top_up">The amount of unlocked (Yelp-VIP2) account must be greater than 100, please go to top up</string>
    <string name="cancel">Cancel</string>
    <string name="top_up_now">Top-up now</string>
    <string name="order_center">Order Center</string>
    <string name="uber_eats_vip1">Uber Eats-VIP1</string>
    <string name="commission_for_completing_the_order_0_65">Commission for Completing the Order:0.65%</string>
    <string name="click_the_get_order_button_below_to_get_order_randomly">Click the Get Order Button below to get order randomly</string>
    <string name="total_orders_quantity">Total Orders Quantity :</string>
    <string name="_15">15</string>
    <string name="recharge">Recharge</string>
    <string name="get_order">Get Order</string>
    <string name="balance_status">Balance status</string>
    <string name="account_balance">Account Balance</string>
    <string name="_3">3</string>
    <string name="reviewing">Reviewing</string>
    <string name="_0">0</string>
    <string name="commission_today">Commission Today</string>
    <string name="_0__">0</string>
    <string name="finished_today">Finished Today</string>
    <string name="_0___">0</string>
    <string name="yesterday_commission">Yesterday Commission</string>
    <string name="____0">0</string>
    <string name="team_commission">Team Commission</string>
    <string name="profile_picture_modification">Profile picture modification</string>
    <string name="settings">Settings</string>
    <string name="enter_email">enter_email</string>
    <string name="enter_your_password">enter_your_password</string>
    <string name="confirm_your_password">confirm_your_password</string>
    <string name="sign_up">sign_up</string>
    <string name="log_in_page">Log In Page</string>
    <string name="team_report">Team Report</string>
    <string name="withdrawl_application">WithDrawl Application</string>
    <string name="wolt_pt">Wolt-PT</string>
    <string name="about_us">About us</string>
    <string name="rules_and_regulations">Rules and Regulations</string>
    <string name="agent_cooperation">Agent Cooperation</string>
    <string name="promotions">Promotions</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="withdrawl">WithDrawl</string>
    <string name="commission_0_65">Commission : 0.65%</string>
    <string name="minimum_unlock_amount_20">Minimum Unlock Amount : 20$</string>
    <string name="_15orders_vip1">15orders/vip1/</string>
    <string name="_20">20</string>
    <string name="amhad855">Amhad855</string>
    <string name="welcome">, Welcome</string>
    <string name="vip_1">VIP-1</string>
    <string name="invite_code">Invite Code :</string>
    <string name="_1044175">1044175</string>
    <string name="copy">Copy</string>
    <string name="account_balance1">Account Balance</string>
    <string name="commission_to">Commission to ...</string>
    <string name="_31">3</string>
    <string name="account_balance11">Account Balance</string>
    <string name="my_order">My Order</string>
    <string name="account_details11">Account Details</string>
    <string name="wallet">Wallet</string>
    <string name="invite_friends11">Invite Friends</string>
    <string name="promotion_tutorials">Promotion Tutorials</string>
    <string name="team_report11">Team Report</string>
    <string name="message">Message</string>
    <string name="system_announcement">System Announcement</string>
    <string name="about_us11">About Us</string>
    <string name="rules_and_regulations11">Rules and Regulations</string>
    <string name="agent_cooperation11">Agent Cooperation</string>
    <string name="recharge_promotion">Recharge Promotion</string>
    <string name="setting">Setting</string>
    <string name="trial_bonus">Trial Bonus</string>
    <string name="wheel_of_fortune">Wheel Of Fortune</string>
    <string name="order">Order</string>
    <string name="account_balance111">Account Balance</string>
    <string name="stars">*******</string>
    <string name="cumulative_commission">Cumulative Commission *******</string>
    <string name="all">All</string>
    <string name="processing">Processing</string>
    <string name="review">Review</string>
    <string name="completed">Completed</string>
    <string name="review_rejected">Review Rejected</string>
    <string name="cancelled">Cancelled</string>
    <string name="invalid">Invalid</string>
    <string name="no_more1">No More</string>
    <string name="select_recharge_channel">Select Recharge Channel</string>
    <string name="offline_self_service_recharge">Offline self Service Recharge</string>
    <string name="_0_5">+0.5%</string>
    <string name="select_recharge_channel11">Select Recharge Channel</string>
    <string name="offline_self_service_recharge11">Offline self Service Recharge</string>
    <string name="_1">+1%</string>
    <string name="wolt_s_offline_self_service_top_up_the_submission_order_processing_time_will_be_reviewed_within_1_hour">Wolt\'s offline self-service top-up, the submission order processing time will be reviewed within 1 hour.</string>
    <string name="wolt_s_online_fast_recharge_submit_order_processing_time_review_within_10_minutes">Wolt\'s online fast recharge, submit order processing time review within 10 minutes.</string>
    <string name="please_pay_attention_to_check_the_member_account_balance">Please pay attention to check the member account balance.</string>
    <string name="if_the_recharge_fails_please_contact_customer_service">If the recharge fails, please contact customer service</string>
</resources>