<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/orderFragmentHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/order"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/LLOrder1"
        android:layout_height="wrap_content"
        android:background="@color/linen"
        android:layout_below="@id/orderFragmentHeading"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_balance111"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textSize="23sp"
            android:layout_marginStart="15dp"


            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/stars"
            android:textSize="23sp"
            android:textAlignment="center"
            android:layout_marginStart="15dp"


            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cumulative_commission"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"


            />
        
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/LLOrder1"
        android:orientation="vertical"
        android:layout_marginTop="15sp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LinearLayoutForOrderButtons1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            android:weightSum="90"
            android:layout_marginTop="10dp"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:layout_marginStart="10dp"
                android:text="@string/all"
                android:textColor="@color/black"
                android:backgroundTint="@color/linen"
                android:textSize="12sp"
                android:layout_marginEnd="10dp"
                android:textAllCaps="false"


                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/processing"
                android:textColor="@color/black"
                android:backgroundTint="@color/linen"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"


                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/review"
                android:textColor="@color/black"
                android:backgroundTint="@color/linen"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"

                />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LinearLayoutForOrderButtons2"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            android:weightSum="90"
            android:layout_marginTop="10dp"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/linen"
                android:text="@string/completed"
                android:textSize="12sp"
                android:layout_marginEnd="10dp"
                android:textAllCaps="false"


                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/review_rejected"
                android:textColor="@color/black"
                android:backgroundTint="@color/linen"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"


                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/cancelled"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/linen"
                android:textAllCaps="false"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"


                />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinearLayoutForOrderButtons3"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        android:weightSum="90"
        android:layout_marginTop="10dp"
        >

        <Button
            android:layout_width="105dp"
            android:layout_height="45dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/linen"
            android:layout_marginStart="10dp"
            android:text="@string/invalid"
            android:textSize="12sp"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"


            />

    </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="No More" />

    </LinearLayout>



</RelativeLayout>